--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>learning git commands</h1>
-    <p>This is work done in feature2 branch</p>
+    <p>This is work done in feature2 branch , main branch, added feature2 changes</p>
 </body>
 </html>
