--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>learning git commands</h1>
     <p>This is work done in feature2 branch , main branch, added feature2 changes</p>
-    <p>main branch</p>
+    <p>main branch, feature2 branch</p>
 </body>
 </html>
